# Study-E

./: test.py
back/: package.json  pyproject.toml  requirements.txt
back/back/: main.py  typing.py
back/back/database/: create_tables.py  crud_database.py  models.py
back/back/src/api/: api.py
back/back/src/database/: __init__.py  config.py  database.py  models.py
back/back/src/utils/: generate_id.py  imports.py
back/back/utils/: get_env.py  imports.py
back/src/: index.ts
front/: package-lock.json  package.json
front/src/: ErrorPage.tsx  main.tsx
front/src/components/: Header.tsx
front/src/components/ui/: button.tsx
front/src/routes/: Dashboard.tsx  LoginPage.tsx  Questions.tsx  Root.tsx
front/study-e_frontend/: index.html  package-lock.json  package.json  tsconfig.json
front/study-e_frontend/src/: main.tsx
front/study-e_frontend/src/components/: Header.tsx
front/study-e_frontend/src/routes/: Dashboard.tsx  LoginPage.tsx  RegisterPage.tsx  Root.tsx
