[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["MuriloObr <muriloobregao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.26.0"}
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.2"

[tool.poetry.scripts]
dev = 'back.main:start'
create-tables = 'back.database.create_tables:start'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
